tests/test_proof/bad/no_vars-conflict.catala_en
## Test

Should fail since y has two definitions when x = 0

```catala
declaration scope A:
  context x content integer
  context y content integer

scope A:
  definition x under condition (6*7 = 42) and (false or (true and 1458 / 27 = 54))
  consequence equals 0

  definition y under condition x <= 0 consequence equals -1
  definition y under condition x >= 0 consequence equals 1
  
```
```catala-test-inline
$ catala Proof --disable_counterexamples 
[ERROR] [A.y] At least two exceptions overlap for this variable:
 --> tests/test_proof/bad/no_vars-conflict.catala_en:8.10-11
  |
8 |   context y content integer
  |           ^
  + Test
Counterexample generation is disabled so none was generated.
```
